ajout grafana et api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,8 @@ services:
       - KAFKA_TOPIC=air_quality_topic
     depends_on:
       - kafka
+    ports:
+      - "5000:5000"
 
   grafana:
     build:
