--- a/app/grafana/Dockerfile
+++ b/app/grafana/Dockerfile
@@ -1,5 +1,3 @@
 # Utilise Grafana comme base
 FROM grafana/grafana:latest
-
-# Configuration par défaut (tu peux ajouter tes dashboards ou plugins ici)
-COPY ./provisioning /etc/grafana/provisioning
+RUN grafana-cli plugins install marcusolsson-json-datasource
